fix dark mode bug

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -197,3 +197,7 @@ a {
 .dark-toggle:checked {
     background-color: #2f2f2f;
 }
+
+.dark .form-select {
+    background-image: url("data:image/svg+xml,<svg style='filter: invert(99%) sepia(34%) saturate(0%) brightness(108%) contrast(101%)' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/></svg>")
+}
